fix music on ios bug

--- a/ACNH/acnh_assets/css/main.css
+++ b/ACNH/acnh_assets/css/main.css
@@ -146,9 +146,7 @@ div.multi_select2:checked .icon_more {
 .border_tr {
     border-style: solid;
     border-color: #8aa7ff;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding: 10px;
 }
 
 .border_b {
@@ -303,6 +301,62 @@ div.menu_mask_pop {
     background-color: rgba(0, 0, 0, 0.78);
 }
 
+div.float_box_mask_bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    margin: 0;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.0);
+    z-index: 100;
+}
+
+div.float_box_mask_point {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+div.float_box_mask_pop {
+    position: absolute;
+    border: 2px solid;
+    border-radius: 25px;
+    border-color: #8aa7ff;
+    background-color: rgba(0, 0, 0, 0.78);
+}
+
+div.float_box_title {
+    align-self: center;
+    position: relative;
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    margin: 10px 10px 25px 10px;
+    font-weight: bold;
+}
+
+div.float_box_content {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+
+div.float_box_mask_pop {
+    height: fit-content;
+    top: calc(-25vh);
+}
+
+.float_box_mask_exit {
+    position: absolute;
+    top: calc(-25vh - 25px);
+}
+
+img.que_img:hover{
+    filter: sepia(10);
+}
+
 @media screen and (max-width: 2048px) {
     div.detail_card_row {
         display: flex;
@@ -348,6 +402,15 @@ div.menu_mask_pop {
         position: absolute;
         left: 350px;
         top: -375px;
+    }
+
+    div.float_box_mask_pop {
+        width: 1280px;
+        left: -640px;
+    }
+
+    .float_box_mask_exit {
+        left: 640px;
     }
 
 }
@@ -399,6 +462,15 @@ div.menu_mask_pop {
         top: -325px;
     }
 
+    div.float_box_mask_pop {
+        width: 980px;
+        left: -490px;
+    }
+
+    .float_box_mask_exit {
+        left: 490px;
+    }
+
 }
 
 @media screen and (max-width: 1280px) {
@@ -440,6 +512,19 @@ div.menu_mask_pop {
     .menu_mask_exit {
         position: absolute;
         left: 250px;
+        top: -275px;
+    }
+
+    div.float_box_mask_pop {
+        width: 736px;
+        height: 500px;
+        left: -368px;
+        top: -250px;
+    }
+
+    .float_box_mask_exit {
+        position: absolute;
+        left: 368px;
         top: -275px;
     }
 
@@ -486,6 +571,19 @@ div.menu_mask_pop {
         left: 250px;
         top: -275px;
     }
+
+    div.float_box_mask_pop {
+        width: 480px;
+        height: 500px;
+        left: -240px;
+        top: -250px;
+    }
+
+    .float_box_mask_exit {
+        position: absolute;
+        left: 240px;
+        top: -275px;
+    }
 }
 
 @media screen and (max-width: 736px) {
@@ -529,6 +627,19 @@ div.menu_mask_pop {
         left: 200px;
         top: -200px;
     }
+
+    div.float_box_mask_pop {
+        width: 480px;
+        height: 400px;
+        left: -240px;
+        top: -225px;
+    }
+
+    .float_box_mask_exit {
+        position: absolute;
+        left: 240px;
+        top: -200px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -568,6 +679,19 @@ div.menu_mask_pop {
     }
 
     .menu_mask_exit {
+        position: absolute;
+        left: 150px;
+        top: -175px;
+    }
+
+    div.float_box_mask_pop {
+        width: 300px;
+        height: 300px;
+        left: -150px;
+        top: -150px;
+    }
+
+    .float_box_mask_exit {
         position: absolute;
         left: 150px;
         top: -175px;
